--- a/css/combined-styles.css
+++ b/css/combined-styles.css
@@ -108,6 +108,15 @@ li li::before {
     content: "\2014\00A0"; /*em dash and non-breaking space*/
 }
 
+dt {
+    margin-top: 0.5em;
+    font-weight: bold;
+}
+dd {
+    display: list-item;
+    font-style: italic;
+}
+
 code, pre {
     font-family: Consolas, 'Bitstream Vera Sans Mono', monospace;
 }
