--- a/css/combined-styles.css
+++ b/css/combined-styles.css
@@ -104,9 +104,6 @@ li ul {
 	padding-left: 1em;
 	text-indent: -1em;
 }
-li li::before {
-    content: "\2014\00A0"; /*em dash and non-breaking space*/
-}
 
 dt {
     margin-top: 0.5em;
@@ -217,6 +214,10 @@ q strong {
 #title h1 {
     line-height: 72px;
     margin: 100px 0 0 0;
+}
+
+#templating-example li li {
+    display: inline;
 }
 
 .hint {
